Se realizan todos los ajustes solicitados en el control de cambio de diciembre de 2017 y se organiza las librerias para la carga del archivo en excel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,12 @@ db.driver=com.mysql.jdbc.Driver
 #db.url=jdbc:mysql://10.2.2.6:3306/gjasprint3?characterEncoding=utf8
 db.url=jdbc:mysql://127.0.0.1:3306/gja?characterEncoding=utf8
 #db.url=jdbc:mysql://desarrollador04:3306/gja?characterEncoding=utf8
+
 db.username=daniel
 db.password=root1234
+#
 #db.username=root
-#db.password=root
+#db.password=sf.2017* 
 
 
 
