Modificaciones carga caso Offline. Adicion de parentesco, referenciador y cambio de posición de radicado

--- a/src/main/java/com/sf/util/parametros.properties
+++ b/src/main/java/com/sf/util/parametros.properties
@@ -93,7 +93,8 @@ CODIGO.ACTIVIDAD.PROPIA.SI=S
 CODIGO.ACTIVIDAD.PROPIA.NO=N
 
 #parametros ruta carga de archivos
-RUTA.CARGAR.EXCEL=f:/
+#RUTA.CARGAR.EXCEL=f:/
+RUTA.CARGAR.EXCEL=D:/
 RUTA.CARGAR.ARCHIVOS.LISTA=/imagenes/
 
 #parametros parentesco
@@ -103,6 +104,13 @@ PARENTESCO.MADRE.PADRE=Madre/Padre
 PARENTESCO.PADRE=Padre
 PARENTESCO.HERMANO.A=Hermano(a)
 PARENTESCO.ABUELO.A=Abuelo(a)
+PARENTESCO.NIETO.A=Nietos
+PARENTESCO.TIO.A=Tios
+PARENTESCO.SOBRINOS.A=Sobrinos
+PARENTESCO.BISNIETOS.A=Bisnietos
+PARENTESCO.PRIMOS.A=Primos
+PARENTESCO.3DAMNIFICADOS.A=3ros Damnificados
+PARENTESCO.BISABUELOS.A=Bisabuelos
 PARENTESCO.OTRO.A=Otro
 
 #parametro contacto
