--- a/src/main/java/com/sf/util/parametros_documentos.properties
+++ b/src/main/java/com/sf/util/parametros_documentos.properties
@@ -6,6 +6,13 @@ PARAMETRO.PARENTESCO.PADRE=4
 PARAMETRO.PARENTESCO.HERMANO=5
 PARAMETRO.PARENTESCO.ABUELO=6
 PARAMETRO.PARENTESCO.OTRO=7
+PARAMETRO.PARENTESCO.NIETOS=8
+PARAMETRO.PARENTESCO.TIOS=9
+PARAMETRO.PARENTESCO.SOBRINOS=10
+PARAMETRO.PARENTESCO.BISNIETOS=11
+PARAMETRO.PARENTESCO.PRIMOS=12
+PARAMETRO.PARENTESCO.DANMIFICADOS=13
+PARAMETRO.PARENTESCO.BISABUELOS=14
 
 # Parametros Documentos por parentesco
 PARAMETRO.DOCUMENTOS.PARENTESCO.ESPOSO=1,2,3,4,5,6,7,8,9,10,11,12,13
@@ -15,6 +22,13 @@ PARAMETRO.DOCUMENTOS.PARENTESCO.HERMANO=1,2,3,4,5
 #PARAMETRO.DOCUMENTOS.PARENTESCO.ABUELO=1,2,3,4,5,6,7,8,9,10,11,12,13
 PARAMETRO.DOCUMENTOS.PARENTESCO.ABUELO=1
 #PARAMETRO.DOCUMENTOS.PARENTESCO.OTRO=1,2,3,4,5,6,7,8,9,10,11,12,13
+PARAMETRO.DOCUMENTOS.PARENTESCO.NIETO=1,3
+PARAMETRO.DOCUMENTOS.PARENTESCO.TIO=1,3
+PARAMETRO.DOCUMENTOS.PARENTESCO.SOBRINOS=1,3
+PARAMETRO.DOCUMENTOS.PARENTESCO.BISNIETOS=1,3
+PARAMETRO.DOCUMENTOS.PARENTESCO.PRIMOS=1,3
+PARAMETRO.DOCUMENTOS.PARENTESCO.3DAMNIFICADOS=1,3
+PARAMETRO.DOCUMENTOS.PARENTESCO.BISABUELOS=1,3
 PARAMETRO.DOCUMENTOS.PARENTESCO.OTRO=1,2
 
 #cambio
