--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://127.0.0.1:3306/gja?characterEncoding=utf8
 #db.url=jdbc:mysql://desarrollador04:3306/gja?characterEncoding=utf8
 
-db.username=daniel
-db.password=root1234
+#db.username=daniel
+#db.password=root1234
 #
-#db.username=root
-#db.password=sf.2017* 
+db.username=root
+db.password=sf.2017* 
 
 
 
